--- a/Instruction-sentinel_api.ipynb
+++ b/Instruction-sentinel_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "54a825ad-1ed1-4079-9162-90a9c4cf4eb8",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "99e6d1e1",
    "metadata": {},
    "outputs": [],
@@ -91,44 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e1ac7e34",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Territory dimensions: 30,568m x 33,358m | Area: 1,020 km^2\n",
-      "Concatenated image will be in size of 14999 x 14999 p\n",
-      "There are 36 bboxes to download\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "dl from sentinel-hub | bbox: [58.75, 23.85, 58.8, 23.9]: 100%|█████████████████████████| 36/36 [00:41<00:00,  1.15s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All images are downloaded into disk - concatenating images is in progress...\n",
-      "Done!\n",
-      "concatenated image saved in sentinel-concat\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fn inputs:\n",
     "bbox_coords = [58.5, 23.6, 59, 24.1]\n",
@@ -140,7 +106,7 @@
     "data_collection_modes = [DataCollection.SENTINEL2_L2A, DataCollection.SENTINEL2_L1C]\n",
     "\n",
     "final_image = sentinel_territory(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                                resolution=5, img_size=(128, 128), save_concat_image=True, in_memory=False, temp_dir=r\"sentinel-tmp\",\n",
+    "                                resolution=5, img_size=(2500, 2500), save_concat_image=True, in_memory=False, temp_dir=r\"sentinel-tmp\",\n",
     "                                concat_image_dir=r\"sentinel-concat\", concat_image_name=\"default\", delete_temp=True)"
    ]
   },
@@ -160,15 +126,16 @@
    "outputs": [],
    "source": [
     "# fn inputs\n",
-    "bbox_coords = [58.5, 23.6, 59, 24.1]\n",
+    "bbox_coords = [58.7, 23.6, 58.9, 23.8]\n",
     "timeline = ('2023-07-05', '2023-09-25')\n",
     "\n",
     "# Parameters\n",
     "mosaicking_order_modes = ['mostRecent', 'leastCC', 'leastRecent']\n",
     "data_collection_modes = [DataCollection.SENTINEL2_L2A, DataCollection.SENTINEL2_L1C]\n",
     "\n",
-    "img_array, final_image = sentinel_territory(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
-    "                        resolution=10, save_images=False, data_folder=\"sentinel-hub\", subfolder_name=\"default\", img_size=(64, 64))"
+    "concat_image = sentinel_territory(bbox_coords, timeline, config, data_collection=data_collection_modes[1], mosaicking_order = 'mostRecent', maxcc=0.8,\n",
+    "                      resolution=5, img_size=(2500,2500), lon_lat_step=(0.05, 0.05), in_memory=True, save_concat_image=True,\n",
+    "                      concat_image_dir=r\"sentinel-concat\", concat_image_name=\"default\", delete_temp=False)"
    ]
   },
   {
@@ -180,10 +147,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7de23f54",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8cf2ff5",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "print(type(concat_image))\n",
+    "print(concat_image.size)"
+   ]
   },
   {
    "cell_type": "code",
@@ -191,7 +163,55 @@
    "id": "715da3f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from inference_modular import ship_detection\n",
+    "from PIL import Image\n",
+    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\inference_images\"\n",
+    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\debug_images_2\\e7e24507a.jpg\"\n",
+    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\\2023-07-05_2023-09-25-[58.5, 23.6, 58.7, 23.8]-res5-(2500, 2500)-mostRecent-sentinel-2-l1c-maxcc0.8.jpg\"\n",
+    "# images_path = r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\\2023-07-05_2023-09-25-[58.7, 23.6, 58.9, 23.8]-res5-(2500, 2500)-mostRecent-sentinel-2-l1c-maxcc0.8.jpg\"\n",
+    "images_path = r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\\2023-07-05_2023-09-25-[58.5, 23.6, 58.7, 23.8]-res5-(2500, 2500)-mostRecent-sentinel-2-l1c-maxcc0.8.jpg\"\n",
+    "img = Image.open(images_path)\n",
+    "bbox_coords = [58.7, 23.6, 58.9, 23.8]\n",
+    "\n",
+    "result_pred = ship_detection(images=img, bbox_coord_wgs84=bbox_coords, annotations=[\"score\", \"length\", \"coord\"], nms_iou_threshold=0.15, scale_down_factor= 7,\n",
+    "                        adaptive_scale_down_parameters = {'a': 0.3, 'b': 1, 'threshold': 1.5}, confidence_threshold=0.85, sahi_overlap_ratio=0.05,\n",
+    "                        output_annotated_image=True, save_annotated_image=False, output_original_image=True\n",
+    "                        # , output_dir=r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\",\n",
+    "                        # output_name=\"prediction\", annotation_font_size=12, annotation_font=r\"calibri.ttf\", annotation_bbox_width=1,\n",
+    "                        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ca7d872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e71b7cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "947ec0e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# result_pred[\"original_image\"]\n",
+    "result_pred[\"annotated_image\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -199,7 +219,11 @@
    "id": "27bd8d55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PIL import Image\n",
+    "images_path = r\"D:\\NLP 1\\Sat_object_detection\\sentinel-concat\\2023-07-05_2023-09-25-[58.5, 23.6, 59, 24.1]-res5-(2500, 2500)-mostRecent-sentinel-2-l1c-maxcc0.8.jpg\"\n",
+    "img = Image.open(images_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,18 +279,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
   }
  },
  "nbformat": 4,
