bbox2xyz fn added - sentinel_query updated

--- a/sentinel-scraping.ipynb
+++ b/sentinel-scraping.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "from tools import xyz2bbox, sentinel_url_xyz, sentinel_url_longlat\n",
+    "from tools import xyz2bbox, bbox2xyz\n",
+    "from sentinel_api import sentinel_query\n",
     "import datetime, os\n",
     "from io import BytesIO\n",
     "from PIL import Image"
@@ -50,7 +51,7 @@
     }
    ],
    "source": [
-    "sentinel_url_xyz(17, 33, 14, n_days_before_date=15)"
+    "sentinel_query(17, 33, 14, n_days_before_date=15)"
    ]
   },
   {
@@ -76,6 +77,13 @@
     "                           img_name=None, output_img=True, output_url=True)\n",
     "img"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -153,10 +161,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-8.999999999999995"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = -9\n",
+    "x = math.atan(input)\n",
+    "math.tan(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "614.4 431.5497538179553 10\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(36.0, 26.886877206381154, 36.3515625, 27.20000000000001)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from tools import xyz2bbox, bbox2xyz\n",
+    "\n",
+    "bbox_coords = [36, 27, 36.3, 27.2]\n",
+    "x, y, z = bbox2xyz(bbox_coords)\n",
+    "print(x, y, z)\n",
+    "bbox_coords_test = xyz2bbox(x, y, z)\n",
+    "bbox_coords_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sentinel_api import sentinel_xyz, sentinel_longlat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentinel_xyz()"
+   ]
   }
  ],
  "metadata": {
